<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>unit731</groupId>
	<artifactId>HunLinter</artifactId>
	<version>1.10.0-SNAPSHOT</version>

	<packaging>jar</packaging>

	<build>
		<plugins>
			<!-- Source -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Deploy -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
			<!-- JavaDoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<additionalOptions>-html5</additionalOptions>
					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
				</configuration>
			</plugin>
			<!-- Templating -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>generate-version-class</id>
						<goals>
							<goal>filter-sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Shade -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<!-- Run shade goal on package phase -->
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<minimizeJar>true</minimizeJar>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<shadedClassifierName>shaded</shadedClassifierName>
					<filters>
						<!-- FIXME: strengthen the inclusions -->
						<!-- ClassNotFoundException: ch.qos.logback.classic.boolex.OnMarkerEvaluator-->
						<filter>
							<artifact>ch.qos.logback:logback-classic</artifact>
							<includes>
								<include>**</include>
							</includes>
						</filter>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/LICENSE</exclude>
								<exclude>META-INF/LICENSE.txt</exclude>
								<exclude>META-INF/NOTICE</exclude>
								<exclude>META-INF/NOTICE.txt</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>unit731.hunlinter.HunLinterFrame</mainClass>
						</transformer>
					</transformers>
				</configuration>
			</plugin>
			<!-- Compiler -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>*.*</include>
				</includes>
				<filtering>true</filtering>
			</resource>
			<!-- include non–java src files in the same place in the output jar -->
			<resource>
				<directory>${project.build.sourceDirectory}</directory>
				<includes>
					<include>unit731/hunlinter/languages/*/rules.properties</include>
				</includes>
			</resource>
		</resources>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>

		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
		<build.timestamp>${maven.build.timestamp}</build.timestamp>

		<!-- Apache -->
		<org.apache.commons.text.version>1.8</org.apache.commons.text.version>
		<org.apache.commons.io.version>2.6</org.apache.commons.io.version>

		<!-- XChart -->
		<org.knowm.xchart.version>3.6.0</org.knowm.xchart.version>

		<!-- CarrotSearch sizeof -->
		<!--<com.carrotsearch.sizeof.version>0.0.5</com.carrotsearch.sizeof.version>-->

		<!-- Morfologik -->
		<org.carrot2.morfologik-tools.version>2.1.6</org.carrot2.morfologik-tools.version>

		<!-- Logging -->
		<ch.qos.logback.version>1.2.3</ch.qos.logback.version>

		<!-- JUnit -->
		<org.junit.jupiter.version>5.5.2</org.junit.jupiter.version>
	</properties>

	<dependencies>
		<!-- Apache -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${org.apache.commons.text.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${org.apache.commons.io.version}</version>
		</dependency>

		<!-- XChart -->
		<dependency>
			<groupId>org.knowm.xchart</groupId>
			<artifactId>xchart</artifactId>
			<version>${org.knowm.xchart.version}</version>
		</dependency>

		<!-- Morfologik -->
		<dependency>
			<groupId>org.carrot2</groupId>
			<artifactId>morfologik-tools</artifactId>
			<version>${org.carrot2.morfologik-tools.version}</version>
		</dependency>

		<!-- Memory usage -->
<!--		<dependency>
			<groupId>com.carrotsearch</groupId>
			<artifactId>java-sizeof</artifactId>
			<version>${com.carrotsearch.sizeof.version}</version>
		</dependency>-->

		<!-- Logging -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${ch.qos.logback.version}</version>
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${org.junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
